# RL-for-hybrid-CV-DV-complier

./: README.md
Genesis/: .gitignore
Genesis/benchmark/: 4_[+1,0,0,0].ham  4_[-1,+1,+1,0].ham  4_[-1,+1,-1,0].ham  4_[-1,+1,0,0].ham  4_[-1,-1,+1,+1].ham  4_[-1,-1,-1,+1].ham  4_[-1,-1,-1,-1].ham  4_[-1,-1,-1,0].ham  4_[-1,-1,0,0].ham  4_[-2,+1,+1,0].ham  4_[-2,+1,0,0].ham  4_[-2,+2,0,0].ham  4_[-2,-1,+1,0].ham  4_[-2,-1,-1,0].ham  4_[-2,-1,0,0].ham  4_[-2,-2,-1,0].ham  4_[-2,0,+2,0].ham  4_[-2,0,-2,0].ham  4_[-2,0,0,+2].ham  4_[-2,0,0,0].ham  4_[-3,+1,0,0].ham  4_[-3,-1,+1,0].ham  4_[-3,-1,0,0].ham  4_[-3,-2,0,0].ham  4_[-3,0,0,0].ham  4_[-4,+1,0,0].ham  4_[-4,-1,0,0].ham  4_[-4,0,0,0].ham  4_[-5,0,0,0].ham  5_[-1,-1,-1,-1,-1].ham  5_[-2,-1,-1,-1,-1].ham  5_[-2,-1,-1,-1,0].ham  5_[-2,-2,-1,-1,0].ham  5_[-2,-2,-2,0,0].ham  5_[-3,-3,0,0,0].ham  5_[-4,-2,0,0,0].ham  5_[-6,0,0,0,0].ham
Genesis/output/: 4_[+1,0,0,0]_Result.cvdvqasm  4_[-1,+1,+1,0]_Result.cvdvqasm  4_[-1,+1,-1,0]_Result.cvdvqasm  4_[-1,+1,0,0]_Result.cvdvqasm  4_[-1,-1,+1,+1]_Result.cvdvqasm  4_[-1,-1,-1,+1]_Result.cvdvqasm  4_[-1,-1,-1,-1]_Result.cvdvqasm  4_[-1,-1,-1,0]_Result.cvdvqasm  4_[-1,-1,0,0]_Result.cvdvqasm  4_[-2,+1,+1,0]_Result.cvdvqasm  (+75 more)
autocompile/: README.md  decomposerule.md  main.py  pyproject.toml
autocompile/tree_compiler/: __init__.py  compiler.py  operator.py
experiment/: circuit_depth.ipynb  main.py  predict_4.py  predict_5.py  tempCodeRunnerFile.py
hybrid_compiler/: agent.py  environment.py  training.py
hybrid_compiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+11 files in other folders)
