[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tree-compiler"
version = "0.1.0"
description = "量子计算树编译器 - 基于 A* 算法的哈密顿量分解优化系统"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "TreeCompiler Team" }
]
keywords = ["quantum computing", "hamiltonian decomposition", "A* search", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 本项目主要使用 Python 标准库，无需额外依赖
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# [project.scripts]
# tree-compiler = "main:main"
# 如果需要命令行入口点，可以在 main.py 中添加 main() 函数

[tool.hatchling.build.targets.wheel]
# 指定包含的包目录
packages = ["tree_compiler"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

